<resources>
    <string name="app_name">Rate Art</string>

    <!-- Strings related to startup -->
    <string name="signup">Sign up</string>
    <string name="facebook">Log in with Facebook</string>
    <string name="email">Email</string>
    <string name="emailtext">Email or nick:</string>
    <string name="passwordtext">Password:</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="description">The best artists say that art is invaluable ... And you? Could you rate it?</string>
    <string name="emailOrNickname">Enter your email or nick</string>
    <string name="errorPassword">Enter your password</string>
    <string name="error_credentials">User or password are invalid</string>
    <string name="registerStatement">Don\'t have an account?</string>
    <string name="loginStatement">Do you want start to rating?</string>

    <!-- Strings related to signup -->
    <string name="name">Name</string>
    <string name="nametext">Name:</string>
    <string name="surname">Surname</string>
    <string name="surnametext">Surname:</string>
    <string name="nick">Nick name</string>
    <string name="nicktext">Nick name:</string>
    <string name="password2">Confirm password</string>
    <string name="password2text">Confirm password:</string>
    <string name="emailtext1">Email:</string>
    <string name="register">Register</string>
    <string name="privacy">I agree to the terms of service</string>
    <string name="error_name">You need to enter a name</string>
    <string name="error_surname">You need to enter a surname</string>
    <string name="error_nick">You need to enter a nick</string>
    <string name="error_email">You need to enter a email</string>
    <string name="error_password">You need to enter a password</string>
    <string name="error_password2">You need to repeat your password</string>
    <string name="error_password_not_match">The passwords must match</string>
    <string name="error_terms">You must accept the terms</string>
    <string name="logo">Logo</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_fields_required">These fields are required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_signup">Registration failed</string>


    <!-- Strings related to home -->
    <string name="upload">+</string>

    <!-- Strings related to upload -->
    <string name="title">Title</string>
    <string name="titleText">Title:</string>
    <string name="desc">Description</string>
    <string name="descText">Description:</string>
    <string name="img">Image</string>
    <string name="error_upload_post">Error to upload the post</string>
    <string name="upload_post">Your post has been added correctly</string>
    <string name="errorFields">You must complete all the fields</string>

    <!-- Strings related to profile -->
    <string name="logout">⇪</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="valoracionMedia">Average Rating: </string>
    <string name="valora">Rate the image: </string>
    <string name="score">Score</string>
    <string name="error_exists_email">This email already exists</string>
    <string name="error_exists_nickname">This nick already exists</string>


</resources>
