<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout_postFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img"/>

        <TextView
            android:id="@+id/tv_titlePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_post"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_titlePost"
            android:layout_centerHorizontal="true"
            android:text="@string/desc" />

        <TextView
            android:id="@+id/tv_valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_description"
            android:layout_marginStart="70sp"
            android:text="@string/valoracionMedia" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_valor"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/Red"/>

    </RelativeLayout>

</FrameLayout>