<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".Home.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <!-- ********************Middle Section*************************** -->

        <ScrollView
            android:id="@+id/relLayoutUpMid1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/linLayoutUpMid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:weightSum="100">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_weight="50"
                    tools:paddingBottom="25dp">

                    <ImageButton
                        android:id="@+id/upload_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:contentDescription="@string/img"
                        android:minHeight="50dp"
                        android:minWidth="50dp"
                        android:scaleType="fitCenter"
                        android:padding="20dp"
                        android:backgroundTint="@color/white"
                        android:src="@drawable/logo_rateart" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="20"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/titleText"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18dp"
                            android:paddingLeft="20dp"
                            android:layout_weight="40"/>

                        <EditText
                            android:id="@+id/et_title"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="40dp"/>
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="20">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="100">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descText"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18dp"
                            android:paddingLeft="20dp"
                            android:layout_weight="30"/>

                        <EditText
                            android:id="@+id/et_description"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:paddingTop="20dp">

                    <Button
                        android:id="@+id/bt_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/upload"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18dp" />

                </RelativeLayout>

                <android.support.design.widget.AppBarLayout
                    android:layout_height="50dp"
                    android:layout_width="match_parent"
                    android:background="@color/white">
                </android.support.design.widget.AppBarLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</merge>